<resources>
    <string name="app_name">smackchat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="applogo">applogo</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="new_user_signup_here">New user? SignUp here!</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="smackchat">SmackChat</string>
    <string name="already_a_user_login_here">Already a user? Login here!</string>
    <string name="tap_to_change_avatar">Tap to change Avatar</string>
    <string name="logout">logout</string>
    <string name="enter_message_here">enter message here ...</string>
    <string name="sendbtnimg">sendbtnimg</string>
    <string name="time">time</string>
    <string name="channel_description">channel description</string>
    <string name="channel_name">channel name</string>
    <string name="add_channel">Add Channel</string>
</resources>