<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/adddd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_channel"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/addChannelNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/channel_name"
        android:inputType="textPersonName"
        android:textColor="@color/three"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/addChannelDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/channel_description"
        android:inputType="textPersonName"
        android:textColor="@color/three"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
</LinearLayout>